# microservices

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  V1.9-IMPLEMENTATION.md  audit.toml  docker-compose.yml  pyrightconfig.json
.github/: dependabot.yml  deploy-trigger.txt
.github/workflows/: deploy-pipeline.yml  openapi-validation.yml  rust.yml
accounts-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
accounts-service/migrations/: 0001_create_accounts.sql
accounts-service/src/: main.rs
accounts-service/src/lib/: app_state.rs  auth.rs  models.rs  pipeline.rs  router.rs
accounts-service/src/lib/handlers/: accounts.rs  health.rs  mod.rs
accounts-service/tests/: integration_test.rs
activities-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
activities-service/migrations/: 0001_create_activities.sql  0002_fix_completed_boolean.sql
activities-service/src/: main.rs
activities-service/src/lib/: app_state.rs  models.rs  router.rs
activities-service/src/lib/handlers/: activities.rs  health.rs  mod.rs
activities-service/tests/: integration_test.rs
audit-service/: Cargo.toml  Dockerfile  openapi.yaml
audit-service/migrations/: 0001_create_audit_events.sql
audit-service/src/: main.rs
audit-service/src/lib/: app_state.rs  models.rs  router.rs
audit-service/src/lib/handlers/: audit_events.rs  health.rs  mod.rs
audit-service/tests/: integration_test.rs
automation-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
automation-service/migrations/: 0001_create_workflows.sql
automation-service/src/: main.rs
automation-service/src/lib/: app_state.rs  auth.rs  models.rs  router.rs
automation-service/src/lib/handlers/: health.rs  mod.rs  workflows.rs
automation-service/tests/: integration_test.rs
contacts-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
contacts-service/migrations/: 0001_create_contacts.sql
contacts-service/src/: lib.rs  main.rs
contacts-service/src/lib/: app_state.rs  auth.rs  models.rs  router.rs
contacts-service/src/lib/handlers/: contacts.rs  health.rs  mod.rs
contacts-service/tests/: integration_test.rs
docs/: API.md  RATE_LIMITING.md  chaos-runbook.md
docs/cicd-template/: README.md
docs/cicd-template/scripts/: health-check.sh  rollback-aws.sh  rollback-gcp.sh
docs/design/: V1_17_THEME.md
integrations-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
integrations-service/migrations/: 0001_create_connections.sql
integrations-service/src/: main.rs
integrations-service/src/lib/: auth.rs  models.rs  router.rs
integrations-service/src/lib/handlers/: connections.rs  health.rs  mod.rs
integrations-service/tests/: integration_test.rs
opportunities-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
opportunities-service/migrations/: 0001_create_opportunities.sql
opportunities-service/src/: lib.rs  main.rs
opportunities-service/src/lib/: app_state.rs  auth.rs  models.rs  router.rs
opportunities-service/src/lib/handlers/: health.rs  mod.rs  opportunities.rs
opportunities-service/tests/: integration_test.rs
postman/: README.md  generate-collection.mjs  infraportal.postman_collection.json  infraportal.postman_environment.json
projects-service/: Cargo.toml  Dockerfile  openapi.yaml
projects-service/migrations/: 0001_create_tables.sql  0002_add_effort_links_emails.sql
projects-service/src/: lib.rs  main.rs
projects-service/src/lib/: app_state.rs  auth.rs  models.rs  pipeline.rs  router.rs
projects-service/src/lib/handlers/: deliverables.rs  emails.rs  health.rs  links.rs  messages.rs  milestones.rs  mod.rs  projects.rs
projects-service/tests/: integration_test.rs
reporting-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
reporting-service/migrations/: 0001_create_reports.sql
reporting-service/src/: main.rs
reporting-service/src/lib/: app_state.rs  models.rs  router.rs
reporting-service/src/lib/handlers/: health.rs  mod.rs  reports.rs
reporting-service/tests/: integration_test.rs
scripts/: load-test.js  run-checks-wsl.sh  run-checks.ps1
sdks/typescript-sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript-sdk/scripts/: generate.mjs
sdks/typescript-sdk/src/: index.ts
sdks/typescript-sdk/tests/: errors.test.mjs  helpers.mjs  ratelimit.test.mjs  requests.test.mjs  retry.test.mjs
search-service/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  openapi.yaml
search-service/migrations/: 0001_create_search_documents.sql  0002_entity_id_unique.sql
search-service/src/: main.rs
search-service/src/lib/: app_state.rs  models.rs  router.rs
search-service/tests/: integration_test.rs
shared-auth/: Cargo.toml
shared-auth/src/: lib.rs
spend-service/: Cargo.toml  Dockerfile  openapi.yaml
spend-service/migrations/: 0001_create_spend_records.sql
spend-service/src/: lib.rs  main.rs
spend-service/src/lib/: app_state.rs  models.rs  router.rs  sync.rs
spend-service/tests/: integration_test.rs
terraform/: .gitignore  artifact_registry.tf  cloud_run.tf  cloud_sql.tf  cost.tf  cost_variables.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
terraform-soc2-baseline/: README.md
terraform-soc2-baseline/examples/aws-complete/: main.tf
terraform-soc2-baseline/examples/gcp-complete/: main.tf
terraform-soc2-baseline/modules/aws/: audit.tf  containers.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
terraform-soc2-baseline/modules/gcp/: audit.tf  cc9_2_vendor_risk.tf  containers.tf  iam.tf  main.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
(+8 files in other folders)
