[workspace]
members = [
    "accounts-service",
    "activities-service",
    "automation-service",
    "contacts-service",
    "integrations-service",
    "opportunities-service",
    "projects-service",
    "reporting-service",
    "search-service",
    "spend-service",
]
resolver = "2"

# Workspace-wide clippy configuration.
# result_large_err: axum::Response is inherently large; boxing it would require
# invasive changes to all handler return types. Accepted trade-off.
[workspace.lints.clippy]
result_large_err = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
