[workspace]
members = [
    "accounts-service",
    "audit-service",
    "activities-service",
    "automation-service",
    "contacts-service",
    "integrations-service",
    "opportunities-service",
    "projects-service",
    "reporting-service",
    "search-service",
    "spend-service",
]
resolver = "2"

# Workspace-wide clippy configuration.
# result_large_err: axum::Response is inherently large; boxing it would require
# invasive changes to all handler return types. Accepted trade-off.
[workspace.lints.clippy]
result_large_err = "allow"

# Shared dependency versions
[workspace.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls-webpki = "0.103.13"  # Security fix: reachable panic in CRL parsing (RUSTSEC-2026-0104)
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-gcloud-trace = "0.23"
tracing-opentelemetry = "0.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
