[package]
name = "accounts-service"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "accounts_service"
path = "src/lib.rs"

[[bin]]
name = "accounts-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["clock"] }
reqwest.workspace = true
opentelemetry = { version = "0.23", features = ["trace", "metrics"] }
opentelemetry-gcp = { version = "0.23" }
opentelemetry-http = "0.12"
opentelemetry-semantic-conventions = "0.15"
tracing-opentelemetry = "0.24"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
