[package]
name = "reporting-service"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "reporting_service"
path = "src/lib.rs"

[[bin]]
name = "reporting-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-api-kit.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest.workspace = true
rustls-webpki.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "10"
axum-jwt-auth.workspace = true
chrono = { version = "0.4", features = ["clock"] }
csv = "1"
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-gcloud-trace.workspace = true
tracing-opentelemetry.workspace = true
shared-auth = { path = "../shared-auth" }

[dev-dependencies]
http-body-util = "0.1"
pg-embed = "1"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
